fix : bug with carousel on mobile devices

--- a/src/components/Index/FixedSection/fixedSection.module.scss
+++ b/src/components/Index/FixedSection/fixedSection.module.scss
@@ -174,4 +174,7 @@ html[dark-theme="false"] {
   .centerBlock {
     display: none;
   }
+  .logoBlock{
+    width: auto;
+  }
 }
